--- a/EMART-UI/src/app/Buyer/buyer/buyer.component.html
+++ b/EMART-UI/src/app/Buyer/buyer/buyer.component.html
@@ -14,27 +14,27 @@
         <a href="#"><i class="fa fa-fw fa-user"></i>ViewProfile</a>
         <a href="#"><i class="fa fa-fw fa-phone"></i>Contact</a>  -->
         
-        <!-- <div class="search-container">
-          <form action="/action_page.php"> -->
-            <!-- <input type="text" placeholder="Search.." name="search">
-            <button type="submit"><i class="fa fa-search"></i></button> -->
-          <!-- </form>
+         <!-- <div class="search-container">
+        
+            <input type="text" placeholder="Search.." name="search">
+            <button type="submit"><i class="fa fa-search"></i></button>
+          </form>
         </div> 
-      </div>-->
+      </div>
 
 
 
-      <!-- <div class="sidenav"> -->
-          <!-- <h1>Buyer</h1><br><br>
+      <div class="sidenav">
+          <h1>Buyer</h1><br><br>
         <a href=# id="r1"><span class="glyphicon glyphicon-shopping-cart"></span> BuyProduct</a><br><br><br>
         <a href=# id="r1"><span class="glyphicon glyphicon-time"> </span>  PurchaseHistory </a><br><br><br>
-        <a href=# id="r1"><span class="glyphicon glyphicon-eye-open"> </span>  ViewCart</a><br> -->
+        <a href=# id="r1"><span class="glyphicon glyphicon-eye-open"> </span>  ViewCart</a><br>
    
-    <!-- </div> -->
+    </div>
 
 
     
-<!-- </body>
+</body>
 </html>
 
 <div class="offset-3">
@@ -60,7 +60,7 @@
           
           <button id="a" type="reset" (click)="onReset()" >Reset</button>
             
-            
+      </div>    
           <div class="form-group row">
             <label asp-for="PhotoPath" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
@@ -92,7 +92,7 @@
   </div>
       
   
-      </div>-->
+      </div> -->
 
 
-<router-outlet></router-outlet> 
+<router-outlet></router-outlet>  -->
