--- a/EMART-UI/src/app/Seller/add-items/add-items.component.css
+++ b/EMART-UI/src/app/Seller/add-items/add-items.component.css
@@ -1,4 +1,4 @@
-.sidenav a {
+/* .sidenav a {
 	margin-top: 30px;
 	padding: 0px 0px 0px 20px;
 	text-decoration: none;
@@ -25,7 +25,7 @@
     }
     .sidenav a {float: left;}
     div.content {margin-left: 0;}
-  }
+  } */
   
   /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
   @media screen and (max-width: 400px) {
@@ -36,19 +36,19 @@
   }
 * {box-sizing: border-box;}
 
-body {
+/* body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   background-image: url("src\assets\images\shoeback1.jpg");
   height: 650px;
-  /* width: 1035px;  */
-  /* background-repeat: no-repeat; */
+  width: 1035px; 
+  background-repeat: no-repeat;
   background-size: cover;
    background-attachment: fixed; 
 background-position: center;
-}
+} */
 
-.topnav {
+/* .topnav {
   overflow: hidden;
   background-color:rgb(226, 192, 192);
 }
@@ -118,4 +118,67 @@ background-position: center;
   .topnav input[type=text] {
     border: 1px solid #ccc;  
   }
+} */
+
+
+
+
+
+.view {
+   /* width: 200px; */
+   margin-left: 500px;
+ 
+  background-color: black;
+  /* background: transparent(0.5); */
+  width: 500px;
+  position:absolute; 
+  margin-top:290px;
+  margin-left: 500px;
+ transform:translate(-50%,-50%);
+ /* width:250px; */
+ height:300px;
+ padding:50px 80px;
+ box-sizing:border-box;
+ border-radius: 30px;
+ background:rgba(0,0,0,0.5);
+/* position: fixed; */
 }
+   
+/* .loginbox {
+  position:absolute; 
+  margin-top:270px;
+  margin-left: 500px;
+ transform:translate(-50%,-50%);
+ width:250px;
+ height:300px;
+ padding:50px 40px;
+ box-sizing:border-box;
+ border-radius: 30px;
+ background:rgba(0,0,0,0.5);
+position: fixed;
+} */
+/* .loginbox label {
+   color: white;
+   font-size:12px;
+}
+.loginbox input[type="text"],
+.loginbox input[type="password"]
+{
+border:none;
+ border-bottom:0.5px solid #fff;
+ border-bottom-right-radius: 20px;
+background:transparent;
+outline:none;
+height:30px;
+color:#fff;
+font-size:20px;
+}	
+.loginbox button {
+ margin-top: 20px;
+}
+p{
+ color: red;
+ margin-top: 140px;
+ margin-left: 420px;
+}
+ */
