--- a/EMART-UI/src/app/Seller/view-items/view-items.component.html
+++ b/EMART-UI/src/app/Seller/view-items/view-items.component.html
@@ -1,3 +1,4 @@
+<body>
 <form [formGroup]="itemForm" >
   <div class="container py-5">  
     <h3 class="text-center text-uppercase">List of Items</h3>  
@@ -146,4 +147,4 @@
         
         </div>
     </div>
-    
+  </body>
