--- a/EMART-UI/src/app/Account/home/home.component.css
+++ b/EMART-UI/src/app/Account/home/home.component.css
@@ -19,6 +19,8 @@ label {
   color: #999;
   transform: translate(0.25rem, -1.5rem);
   transition: all 0.2s ease-out;
+  text-align: center;
+  float: right;
 }
 /* .topnav {
   overflow: hidden;
