--- a/EMART-UI/src/app/Admin/admin/admin.component.html
+++ b/EMART-UI/src/app/Admin/admin/admin.component.html
@@ -21,6 +21,10 @@
           <li class="nav-item">
             <a class="nav-link" [routerLink]="'view-sub-categories'"><span class="glyphicon glyphicon-plus"></span>  View SubCategory </a>
           </li>
+          
+            <a (click)="Logout()">Logout</a> 
+          
+         
          </ul></div></nav></div>
         <router-outlet></router-outlet>
         
