--- a/EMART-UI/src/app/Buyer/buy-product/buy-product.component.html
+++ b/EMART-UI/src/app/Buyer/buy-product/buy-product.component.html
@@ -1,5 +1,5 @@
-<p>buy-product works!</p>
-<div  class="jumbotron  " >
+<p>buy-product </p>
+<!-- <div  class="jumbotron  " > -->
     <h3>Buy Product</h3>
   <form [formGroup]="transForm">
       <div class="form-group">
@@ -25,5 +25,5 @@
   </div>
   
   </form>
-  </div>
+  <!-- </div> -->
   
