--- a/EMART-UI/src/app/Seller/seller/seller.component.html
+++ b/EMART-UI/src/app/Seller/seller/seller.component.html
@@ -4,8 +4,8 @@
         <a [routerLink]="['add-items']"  ><span class="glyphicon glyphicon-folder-open"></span> Add Items</a>
         <a [routerLink]="['view-items']" ><span class="glyphicon glyphicon-search"> </span> View Items </a>
         <a href=#><span class="glyphicon glyphicon-file"> </span>  View Report</a>
-        <a [routerLink]="['view-profile']" routerLinkActive="router-link-active" ><span class="glyphicon glyphicon-file"> </span>  View Profile</a>
-        <a [routerLink]="['/home/login']" routerLinkActive="router-link-active">Logout</a> 
+        <a [routerLink]="['view-seller-profile']" routerLinkActive="router-link-active" ><span class="glyphicon glyphicon-file"> </span>  View Profile</a>
+        <a (click)="Logout()">Logout</a> 
         
         <!-- <div class="search-container">
           <form action="/action_page.php"> -->
