--- a/EMART-UI/src/app/Seller/view-seller-profile/view-seller-profile.component.html
+++ b/EMART-UI/src/app/Seller/view-seller-profile/view-seller-profile.component.html
@@ -20,7 +20,7 @@
                 <input type="text" formControlName="emailId" placeholder="Enter Email" class="form-control input-line full-width" [ngClass]="{ 'is-invalid': submitted && f.emailId.errors }" />
                
                 <label>MOBILE</label>
-                <input type="text" formControlName="mobileno" placeholder="Enter Mobile Number" class="form-control input-line full-width" [ngClass]="{ 'is-invalid': submitted && f.mobileNo.errors }" />
+                <input type="text" formControlName="mobileNo" placeholder="Enter Mobile Number" class="form-control input-line full-width" [ngClass]="{ 'is-invalid': submitted && f.mobileNo.errors }" />
                 
                <label>Company Name</label>
                 <input type="text" formControlName="companyName" placeholder="Enter Company Name" class="form-control input-line full-width" [ngClass]="{ 'is-invalid': submitted && f.companyName.errors }" />
@@ -34,7 +34,8 @@
                 <input type="text" formControlName="briefDetails" placeholder="Enter Brief Details" class="form-control input-line full-width" [ngClass]="{ 'is-invalid': submitted && f.briefDetails.errors }" />
                 <label>WEBSITE</label>
                 <input type="text" formControlName="website" placeholder="Enter Brief Details" class="form-control input-line full-width" [ngClass]="{ 'is-invalid': submitted && f.website.errors }" />
-                
+                <!-- <label>CreateDateTime</label>
+                <input type="datetime" formControlName="createDateTime" placeholder="Enter Brief Details" class="form-control input-line full-width" [ngClass]="{ 'is-invalid': submitted && f.createDateTime.errors }" /> -->
                 
             </div>
               <br><br>
