--- a/EMART-UI/src/app/Account/home/home.component.html
+++ b/EMART-UI/src/app/Account/home/home.component.html
@@ -32,9 +32,9 @@
 </div>
 </div>
 </div> -->
-<marquee width="5%" direction="up" height="8%">
+<!-- <marquee width="5%" direction="up" height="8%">
     <h1>shop Now</h1>
-</marquee>
+</marquee> -->
 <div><marquee><h1><b>Shop Mart</b></h1></marquee></div>
 
 
@@ -51,19 +51,19 @@
 <!-- </div> -->
     </div>
 </div>
-    <div class="col-lg-12">
 
+    <div class="col-lg-12">
+        <label>Run or Walk You will Use To It</label>
         <router-outlet></router-outlet>
 
         
     </div>
 
 
-    <!-- <footer>
-        Copyright © 2017 <b>DotNet Techy</b> YouTube Channel-(One Place to learn everything about Angular 2,4,5 along WEBAPI(RestFull) and Microsoft Dot Net Technology)
-     </footer> -->
+   
 
 </body>
 </html>
-
-<!-- <router-outlet></router-outlet> -->
+<footer>
+   <h4> Copyright © 2020 <b>Shoe Mart</b></h4>
+ </footer>
