--- a/EMART-UI/src/app/Buyer/view-cart/view-cart.component.html
+++ b/EMART-UI/src/app/Buyer/view-cart/view-cart.component.html
@@ -1,5 +1,4 @@
-<p>view-cart works!</p>
-<br><br><br>
+
 <p>View Cart</p>
 <div class="container">
     <div class="row">
@@ -9,7 +8,8 @@
              <img class="card-img " id="i1" src="assets/images/{{item.image}}" alt="Card image cap"> 
               <div class="card-body" >
                 <!-- ItemId:{{item.itemId}}<br/>
-                CategoryId:{{item.categoryId}}<br/>
+                CategoryId:{{item
+                    .categoryId}}<br/>
                 SubCategoryId:{{item.subcategoryId}}<br/>
                  SellerId: {{item.sellerId}}<br/> -->
                  Price: {{item.price}}<br/>
@@ -27,4 +27,3 @@
         </div>
       </div>
     </div>
-    
