--- a/EMART-UI/src/app/Buyer/buy-product/buy-product.component.html
+++ b/EMART-UI/src/app/Buyer/buy-product/buy-product.component.html
@@ -44,7 +44,7 @@
                                         <option value="-1">Choose..</option>
                                         <option value="credit">Credit Card</option>
                                         <option value="debit">Debit Card</option>
-                                        <option value="cod">Cash On Delivery</option>
+                                        <!-- <option value="cod">Cash On Delivery</option> -->
                                     </select>
                                   </div>
                                   <div class="form-group">
