--- a/EMART-UI/src/app/Account/register-buyer/register-buyer.component.html
+++ b/EMART-UI/src/app/Account/register-buyer/register-buyer.component.html
@@ -6,6 +6,8 @@
 
 <!-- <div  class="jumbotron jumbotron-fluid " > -->
     <h4>Registration Form </h4>
+    <a [routerLink]="['/home/login']" routerLinkActive="router-link-active"  id="r1"><span class="glyphicon glyphicon-shopping-cart"></span><b> <h2>Home</h2></b></a><br><br>
+    
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
       
     <!-- <div class="form-group ">
