--- a/EMART-UI/src/app/Account/register-seller/register-seller.component.html
+++ b/EMART-UI/src/app/Account/register-seller/register-seller.component.html
@@ -14,6 +14,7 @@
             <div class="card-body"> -->
                 <!-- <div  class="jumbotron"> -->
                     <h5 >RegistrationPage</h5>
+                    <a [routerLink]="['/home/login']" routerLinkActive="router-link-active"  id="r1"><span class="glyphicon glyphicon-shopping-cart"></span><b> <h2>Home</h2></b></a><br><br>
                 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" id="f1">
                     
                        
