--- a/EMART-UI/src/app/Admin/add-category/add-category.component.html
+++ b/EMART-UI/src/app/Admin/add-category/add-category.component.html
@@ -4,9 +4,9 @@
 
 
 
-<p>add-category works!</p>
+<!-- <p>add-category works!</p> -->
 <!-- <div  class="jumbotron jumbotron-fluid " > -->
-    <h4>Registration Form </h4>
+    <h4>Adding Category </h4>
   <form [formGroup]="addcatgForm" (ngSubmit)="onSubmit()">
       
     <!-- <div class="form-group ">
@@ -37,7 +37,7 @@
 
   <div class="text">
 
-      <button  type="submit" >Register</button>
+      <button  type="submit" >Add</button>
       <button  type="reset" (click)="onReset()" >Reset</button>
       
   </div>
