--- a/EMART-UI/src/app/Buyer/buyer/buyer.component.html
+++ b/EMART-UI/src/app/Buyer/buyer/buyer.component.html
@@ -17,8 +17,9 @@
         <a [routerLink]="['view-buyer-profile']" routerLinkActive="router-link-active" ><i class="fa fa-fw fa-user"></i>ViewProfile</a>
         <a href="#"><i class="fa fa-fw fa-phone"></i>Contact</a> 
         <a [routerLink]="['search']" ><span class="glyphicon glyphicon-expand" > </span> Search </a><br><br>
+        
         <div class="sidenav">
-            <h1>Buyer</h1><br><br>
+            <!-- <h1>Buyer</h1><br><br> -->
           <a [routerLink]="['buy-product']"  id="r1"><span class="glyphicon glyphicon-shopping-cart"></span> BuyProduct</a><br><br><br>
           <a [routerLink]="['purchase-history']"   id="r1"><span class="glyphicon glyphicon-time"> </span>  PurchaseHistory </a><br><br><br>
           <a [routerLink]="['view-cart']"   id="r1"><span class="glyphicon glyphicon-eye-open"> </span>  ViewCart</a><br>
