--- a/EMART-UI/src/app/Account/home/home.component.css
+++ b/EMART-UI/src/app/Account/home/home.component.css
@@ -94,33 +94,24 @@ label {
 {
     float: right;
 }
+#a1{
+  float: right;
+}
 
 
-
-/* .sidenav a {
-  
-        float: left;
-        display: block;
-        color: black;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-      
-} */
 #r1
 {
   text-align: center;
   text-emphasis-style: initial;
-  font-size: 20px;
+  font-size: 25px;
   size: 50px;
   font-style: oblique;
   
 }
-#c1
+/* #c1
 {
   
-}
+} */
 .sidenav input[type=text] {
     padding: 10px;
     margin-top: 8px;
