--- a/EMART-UI/src/app/Account/register-seller/register-seller.component.css
+++ b/EMART-UI/src/app/Account/register-seller/register-seller.component.css
@@ -77,7 +77,7 @@ font-style: italic;
   padding: 12px;
 } */
 
- input {
+ /* input {
   box-sizing: border-box;
   display: block;
   width: 900%;
@@ -88,7 +88,18 @@ font-style: italic;
   font-family: inherit;
   font-size: 1.95em;
   text-align: left;
-}
+} */
+input[type=text], 
+input[type=password] { 
+  text-align: center;
+  width: 20%; 
+  padding: 1px 5px; 
+  margin: 2px 0; 
+  display: grid; 
+  border: 1px solid #ccc; 
+  box-sizing: border-box; 
+} 
+
 
 /* .b1 input[type="text"],
 .b1 input[type="password"] {
