--- a/EMART-UI/src/app/Buyer/buyer/buyer.component.css
+++ b/EMART-UI/src/app/Buyer/buyer/buyer.component.css
@@ -13,7 +13,7 @@
 	z-index: 1;
 	top: 70px;
 	left: 0px;
-	background-color:lightskyblue ;
+	/* background-color: red; */
 	overflow-x: hidden;
 	padding-top: 20px;
 }
@@ -22,7 +22,8 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url("src\assets\images\shoeshop.jpg");
+  /* background-image: url("src\assets\images\shoeshop.jpg"); */
+ background-image: url("src\assets\images\shoe5.jpg");
   height: 650px;
   /* width: 1035px;  */
   /* background-repeat: no-repeat; */
@@ -40,9 +41,9 @@ background-position: center;
 }
 
 .topnav a {
-  float: right;
+   float: right; 
   display: block;
-  color: plum;
+  color:palevioletred;
   text-align: center;
   padding: 23px 16px;
   text-decoration: none;
